<resources>
    <string name="app_name">Fitcam</string>
    <string name="Peso_actual">Peso actual:</string>
    <string name="altura_actual">Altura actual:</string>
    <string name="nueva_altura">Nueva altura</string>
    <string name="nuevo_peso">Nuevo peso</string>
    <string name="guardar_informacion">Guardar informcación</string>
    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="atras">Atras</string>
    <string name="configura_tus_medidas">Configura Tus medidas</string>
    <string name="esto_servira_para_adaptar_lo_ejercicios_a_ti">Esto servirá para adaptar lo ejercicios a ti</string>
    <string name="perfil_de_usuario">Perfil de usuario</string>
    <string name="favoritos">Favoritos</string>
    <string name="home">Home</string>
    <string name="consejos">Consejos:</string>
    <string name="que_vamos_a_hacer_hoy">¿Que vámos a hacer hoy?</string>
    <string name="boton_del_rea_pierna">Botón del área pierna</string>
    <string name="bot_n_del_rea_brazo">Botón del área brazo</string>
    <string name="bot_n_del_rea_espalda">Botón del área espalda</string>
    <string name="bot_n_del_rea_dorso">Botón del área dorso</string>
    <string name="pierna">Pierna</string>
    <string name="brazo">Brazo</string>
    <string name="espalda">Espalda</string>
    <string name="dorso">Dorso</string>
    <string name="observa_tu_progreso">Observa tu progreso</string>
    <string name="bot_n_del_historial">Botón del historial</string>
    <string name="bot_n_de_tu_progreso">botón de tu progreso</string>
    <string name="historial">Historial</string>
    <string name="tu_progreso">Tu progreso</string>
    <string name="sentadillas">Sentadillas</string>
    <string name="lagartijas">Lagartijas</string>
    <string name="abdominales">Abdominales</string>
    <string name="mostrar_calendario">Mostrar Calendario</string>
    <string name="mostrar_ncalendario">Mostrar\nCalendario</string>
</resources>