<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left">

        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/chevron_left_thin"
            android:contentDescription="@string/atras"
            android:scaleType="fitXY"
        />

        <TextView
            android:id="@+id/textDatosDeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:text="@string/datos_de_usuario"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textPesoActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Peso_actual"
        android:textSize="18sp"
        android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAlturaActual"
        android:text="@string/altura_actual"
        android:textSize="18sp"
        android:paddingBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPeso"
        android:hint="@string/nuevo_peso"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editAltura"
        android:hint="@string/nueva_altura"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnActualizar"
        android:text="@string/guardar_informacion"
        android:layout_marginTop="20dp" />

</LinearLayout>