<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayaut1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal"
        android:layout_marginTop="33dp"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/atras"
            android:scaleType="fitXY"
            android:layout_marginStart="30dp"
            android:src="@drawable/chevron_left" />

        <TextView
            android:id="@+id/textTuProgreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/tu_progreso"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartProgreso"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/linearLayoutBarra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnCasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/home_fill"
            android:contentDescription="@string/home" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnFavoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/favorite"
            android:contentDescription="@string/favoritos" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/following"
            android:contentDescription="@string/perfil_de_usuario" />

    </LinearLayout>


</LinearLayout>