<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/linearLayoutBarra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btnCasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/home_fill"
            android:contentDescription="@string/home" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnFavoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/favorite"
            android:contentDescription="@string/favoritos" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/following"
            android:contentDescription="@string/perfil_de_usuario" />

    </LinearLayout>
</LinearLayout>